syntax = "proto3";
package api;

import "google/api/annotations.proto";

service GithubRPC {
     rpc GetGithubResponse(GithubRequest) returns (GithubResponse) {
         option (google.api.http) = {
            post: "/message"
            body: "*"
         };
     }
}
message GithubRequest {
  string message = 1;
}
message GithubResponse {
  string message = 1;
}

